[gd_scene load_steps=5 format=3 uid="uid://bl3fwomlf1rvq"]

[ext_resource type="Script" uid="uid://biuyiwapx80mg" path="res://estacao_cultura.gd" id="1_ahnhr"]
[ext_resource type="Texture2D" uid="uid://ceqynjq3i84f5" path="res://img/estacao-cultura.jpg" id="1_hh0px"]
[ext_resource type="PackedScene" uid="uid://n386jdcbvm5m" path="res://controls.tscn" id="3_302fx"]
[ext_resource type="PackedScene" uid="uid://bfjh6bn4m6uke" path="res://score.tscn" id="4_qa10d"]

[node name="EstacaoCultura" type="Node2D"]
script = ExtResource("1_ahnhr")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_hh0px")

[node name="Controls" parent="." instance=ExtResource("3_302fx")]
visible = false

[node name="Score" parent="." instance=ExtResource("4_qa10d")]
visible = false

[connection signal="finished" from="." to="." method="_on_finished"]
[connection signal="ended" from="Controls" to="." method="_on_controls_ended"]
[connection signal="next" from="Score" to="." method="_on_score_next"]
[connection signal="reset" from="Score" to="." method="_on_score_reset"]
